--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,25 +10,32 @@
   </head>
 
   <body>
-
-    <script>
-      $( document ).ready(function() {
-      // メッセージを３秒後にフェードアウトする
-      $('#notice').fadeOut(3000);
-      });
-    </script>
-
     <header>
       <div class="header-logo">
-        <%= link_to('Twiclone', '/') %>
+        <%= link_to('Twiclone', '/', class: "link") %>
       </div>
-    </header>
+      <div class = header-menu>
+        <% if @current_user %>
+        <ul>
+          <li><%= link_to(@current_user.name, "/users/#{@current_user.id}") %></li>
+          <li><%= link_to("ユーザー一覧", "/users/index") %></li>
+          <li><%= link_to("ログアウト", "/logout", {method: :post}) %></li>
+        </ul>
+        <% else %>
+        <ul>
+        <li><%= link_to("ユーザー一覧", "/users/index") %></li>
+        <li><%= link_to("新規登録", "/signup") %></li>
+        <li><%= link_to("ログイン", "/login") %></li>
+        </ul>
+        <% end %>
+      </div>
 
-    <% if flash[:notice] %>
-      <div id="notice" class="flash">
-        <%= flash[:notice] %>
-      </div>
-    <% end %>
+      <% if flash[:notice] %>
+        <div id="notice" class="flash">
+          <%= flash[:notice] %>
+        </div>
+      <% end %>
+    </header>
 
     <%= yield %>
   </body>
