--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,11 @@
 <h2>編集する</h2>
+
+<% @post.errors.full_messages.each do |message| %>
+  <div class="error-form">
+    <%= message %>
+  </div>
+<% end %>
+
 <%= form_tag("/posts/#{@post.id}/update") do %>
 <textarea name="content"><%= @post.content %></textarea>
 <input type="submit" value="編集">
