--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,20 +1,9 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-* {
-  box-sizing: border-box;
-}
-
-html {
-  font: 100%/1.5 'San Francisco', 'Hiragino Sans', sans-serif;
-  line-height: 1.7;
-  letter-spacing: 1px;
-  background-color: #E0F2F7;
-}
 
 .home-content {
   text-align: center;
-  margin: 50px 0;
 }
 
 .home-index {
@@ -27,35 +16,42 @@ html {
   font-size: 10px;
 }
 
-.home-form textarea {
+.form textarea {
   width: 50%;
-  min-height: 60px;
-  font-size: 16px;
-  letter-spacing: 2px;
+  font-size: 12px;
+  letter-spacing: 1px;
   border: 1px solid #BDBDBD;
 }
 
-.index-content {
-  position: static;
+.home-index {
+  width: 100%;
+  border: none;
+}
+
+.index-left {
+  display: inline-block;
+  width: 10%
+}
+
+.index-left img {
   text-align: center;
+}
+
+.index-user-name {
+  text-align: center;
+}
+
+.index-right {
+  display: inline-block;
+  width: 80%;
+}
+
+.index-content {
+  padding-left: 20px;
+  text-align: left;
 }
 
 .index-created {
-  font-size: 10px;
-  position: relative;
-}
-
-
-/* フラッシュ ============================= */
-
-.flash {
-  padding: 10px 0;
-  color: white;
-  background: skyblue;
-  text-align: center;
-  position: absolute;
-  z-index: 10;
-  width: 100%;
-  border-radius: 0 0 2px 2px;
-  font-size: 14px;
+  text-align: right;
+  font-size: 12px;
 }
