--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,24 +1,33 @@
 <div class="home-content">
-  <div class="home-header">
-    <p>今の気持ちをつぶやいてみよう</p>
-  </div>
 
-<%= form_tag("/posts/create") do %>
-<div class="home-form">
-  <textarea name="content"><%= @post.content %></textarea>
-  <input type="submit" value ="つぶやく">
-</div>
-<% end %>
-
-<div class="home-index">
-  <% @posts.each do |post| %>
-  <p class="index-content">
-  <%= link_to(post.content, "/posts/#{post.id}") %>
-  <span class="index-created">
-  <%= post.created_at %>
-  </span>
-  </p>
+  <% if @current_user %>
+    <%= form_tag("/posts/create") do %>
+    <div class="form">
+      <textarea name="content" placeholder="今の気持ちをつぶやいてみよう"></textarea>
+      <input type="submit" value ="つぶやく">
+    </div>
+    <% end %>
   <% end %>
-</div>
+
+    <% @posts.each do |post| %>
+    <% user = User.find_by(id: post.user_id) %>
+  <div class="home-index">
+    <div class="index-left">
+      <div class="index-user-name">
+        <%= link_to(user.name, "/users/#{user.id}") %>
+      </div>
+      <img src="<%= "/user_images/#{user.image_name}" %>">
+    </div>
+
+    <div class="index-right">
+      <p class="index-content">
+      <%= link_to(post.content, "/posts/#{post.id}") %>
+      </p>
+      <p class="index-created">
+      <%= post.created_at %>
+      </p>
+    </div>
+  </div>
+    <% end %>
 
 </div>
