--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,21 +1,26 @@
-<h2>新規登録</h2>
+<div class="content">
 
-<% @user.errors.full_messages.each do |message| %>
-<div class="error-messages">
-  <%= message %>
-</div>
-<% end %>
+  <h2>新規登録</h2>
 
-<div class="form">
-  <%= form_tag("users/create", {multipart: true}) do %>
-    <p>ユーザー名</p>
-    <input name="name" type="text" value="<%= @user.name %>">
-    <p>メールアドレス</p>
-    <input name="email" type="text" value="<%= @user.email %>">
-    <p>パスワード</p>
-    <input name="password" type="password" value="<%= @user.password %>">
-    <p>ユーザー画像</p>
-    <input name= "image" type="file">
-    <input type="submit" value="作成">
+  <% @user.errors.full_messages.each do |message| %>
+  <div class="error-messages">
+    <%= message %>
+  </div>
   <% end %>
+
+  <div class="form">
+  <%= form_tag("users/create", {multipart: true}) do %>
+    <div class="input-form">
+      <p>ユーザー名</p>
+      <input name="name" type="text" value="<%= @user.name %>">
+      <p>メールアドレス</p>
+      <input name="email" type="text" value="<%= @user.email %>">
+      <p>パスワード</p>
+      <input name="password" type="password" value="<%= @user.password %>">
+      <p>ユーザー画像</p>
+      <input name= "image" type="file">
+      <input type="submit" value="作成">
+  <% end %>
+    </div>
+  </div>
 </div>
